--- a/serie.html
+++ b/serie.html
@@ -20,7 +20,7 @@
 body {margin:0; background:#000; color:#fff; font-family:Arial,sans-serif;}
 .container{max-width:1100px; margin:auto; padding:12px;}
 .player-wrapper{position:relative; width:100%; aspect-ratio:16/9; background:#000;}
-iframe{width:100%; height:100%; border:0;}
+#plyrPlayer, #drivePlayer{width:100%; height:100%; border:0;}
 .hidden{display:none;}
 button{padding:12px 18px; font-size:15px; border:none; border-radius:6px; margin:6px 6px 6px 0; cursor:pointer;}
 .primary{background:#e50914;color:#fff;}
@@ -35,7 +35,7 @@ button{padding:12px 18px; font-size:15px; border:none; border-radius:6px; margin
 <div class="container">
 
 <div class="player-wrapper">
-  <!-- Plyr iframe for YouTube & Vimeo -->
+  <!-- Plyr for YouTube / Vimeo -->
   <div id="plyrContainer">
     <div id="plyrPlayer"></div>
   </div>
@@ -113,18 +113,16 @@ function detectType(url){
   return "unknown";
 }
 
-function normalizeYouTube(url){
-  const id = (url.match(/v=([^&]+)/) || url.match(/youtu\.be\/([^?]+)/))?.[1];
-  return id ? `https://www.youtube.com/watch?v=${id}` : url;
+function getYouTubeID(url){
+  return (url.match(/v=([^&]+)/) || url.match(/youtu\.be\/([^?]+)/))?.[1];
 }
 
-function normalizeVimeo(url){
-  return url;
+function getVimeoID(url){
+  return url.match(/vimeo\.com\/(\d+)/)?.[1];
 }
 
-function normalizeDrive(url){
-  const id = (url.match(/\/d\/([^/]+)/) || url.match(/id=([^&]+)/))?.[1];
-  return id ? `https://drive.google.com/file/d/${id}/preview` : url;
+function getDriveID(url){
+  return (url.match(/\/d\/([^/]+)/) || url.match(/id=([^&]+)/))?.[1];
 }
 
 /* ================= LOAD EPISODE ================= */
@@ -140,19 +138,17 @@ function loadEpisode(index, userAction=false){
   if(type === "youtube" || type === "vimeo"){
     plyrContainer.classList.remove("hidden");
 
-    // Initialize Plyr
-    plyrInstance = new Plyr(plyrContainer, {
-      type: type,
-      sources: [{
-        src: type==="youtube" ? normalizeYouTube(ep.video) : normalizeVimeo(ep.video),
-        provider: type
-      }],
-      autoplay: true
-    });
+    let source = {};
+    if(type==="youtube") source = {src:getYouTubeID(ep.video), provider:"youtube"};
+    else source = {src:getVimeoID(ep.video), provider:"vimeo"};
 
-    // Resume timestamp after ready
+    plyrInstance = new Plyr('#plyrPlayer', {autoplay:true, controls:['play','progress','current-time','mute','volume','fullscreen'], clickToPlay:true});
+    plyrInstance.source = {type:"video", sources:[source]};
+
+    // Resume after ready
     plyrInstance.on('ready', ()=>{
       if(resumeTime>0) plyrInstance.currentTime = resumeTime;
+      plyrInstance.play().catch(()=>{});
     });
 
     // Track time for resume
@@ -169,22 +165,15 @@ function loadEpisode(index, userAction=false){
     });
 
   } else if(type === "drive"){
-    drivePlayer.src = normalizeDrive(ep.video);
+    const id = getDriveID(ep.video);
+    drivePlayer.src = `https://drive.google.com/file/d/${id}/preview`;
     drivePlayer.classList.remove("hidden");
-
-    // Save resume time for Drive (best effort)
-    drivePlayer.onload = ()=>{
-      const driveKey = `drive_resume_${seriesId}_${index}`;
-      const lastTime = localStorage.getItem(driveKey) || 0;
-      // Try to postMessage to Drive iframe
-      drivePlayer.contentWindow?.postMessage({func:"seekTo", time:lastTime}, "*");
-    };
   }
 
-  // Save episode index for resume
+  // Save episode index
   localStorage.setItem(storageKey, JSON.stringify({episode:index, time:resumeTime}));
 
-  // Fullscreen if user has PIN
+  // Fullscreen if PIN
   if(userAction && userHasActivePIN()){
     const el = !plyrContainer.classList.contains("hidden") ? plyrContainer : drivePlayer;
     el.requestFullscreen?.();
